--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.4.2
   provider: ^6.1.2
   lottie: ^3.1.2
+  email_otp: ^3.0.2
 
 dev_dependencies:
   flutter_test:
